1. Метод .of [#483204]